5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_1189.log
== TEST (2019-05-28 17:06:24) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
inv = inv + s[i]
i = i - 1
print(inv)

-- ERROR:
File "XXXX", line 7
    inv = inv + s[i]
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:13:14) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:13:29) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:13:38) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- EXECUTION TIME:
0.166729
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
amalanadanalama
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:13:55) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:14:26) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:16:20) 
-- CODE:
s = input("Digite uma string: ")
s=s.replace(" ","")
s=s.upper()
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:16:35) 
-- CODE:
s = input("Digite uma string: ")
s=s.replace(" ","")
s=s.upper()
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
if(s==inv):
	print(1)
else:
	print(0)

-- EXECUTION TIME:
0.131991
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:17:27) 
-- CODE:
s = input("Digite uma string: ")
s=s.replace(" ","")
s=s.upper()
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(s)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:17:36) 
-- CODE:
s = input("Digite uma string: ")
s=s.replace(" ","")
s=s.upper()
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(s)
if(s==inv):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:17:43) 
-- CODE:
s = input("Digite uma string: ")
s=s.replace(" ","")
s=s.upper()
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(s)
if(s==inv):
	print(1)
else:
	print(0)

-- EXECUTION TIME:
0.178178
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
